# mpc-key-sharing

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yaml
KrakenKeySharing/: __init__.py  key_sharing.py
KrakenKeySharing/tests/: test_key_sharing.py
