[metadata]
name = KrakenKeySharing
version = 0.0
author = Sebastian Ramacher
author_email = sebastian.ramacher@ait.ac.at
url = https://github.com/krakenh2020/mpc-key-sharing
description = Playground for MPC-based key sharing solutions
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = KrakenKeySharing
install_requires =
  python-relic >= 0.2
python_requires = >=3.7
